Fri Jul 14 15:39:53 UTC 2006  Adam Mitz  <mitza@ociweb.com>

        * bin/tao_other_tests.lst:
          Added new test (TAO/orbsvcs/tests/CosEvent/Timeout/run_test.pl).

Fri Jul 14 10:34:43 UTC 2006  Steve Huston  <shuston@riverace.com>

        * ace/config-vxworks6.2.h: Added ACE_LACKS_USECONDS_T to fix a
          compile error. It's in the non-__RTP__ section since that's where
          ACE_LACKS_SUSECONDS_T was, but I'm not sure this is correct.

Fri Jul 14 07:26:46 UTC 2006  Olli Savia  <ops@iki.fi>

        * ace/Thread_Mutex.h:
        * ace/ace_wchar.h:
        * tests/SOCK_Dgram_Bcast_Test.cpp:
          Fixed typos in comments.

        * m4/config_h.m4:
          Removed references to ACE_HAS_TERM_IOCTLS. It's no longer
          used in ACE/TAO/CIAO code.

Fri Jul 14 02:11:21 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * bin/tao_orb_tests.lst:
          Added new test for Bug 2593 to nightly suite.

Thu Jul 13 20:40:10 UTC 2006  Olli Savia  <ops@iki.fi>

        * ace/config-integritySCA.h:
          Removed references to ACE_HAS_ATTR_SETSCHED. It's no longer
          used in ACE/TAO/CIAO code.

        * ace/config-rtems.h:
          Removed references to ACE_HAS_SIGNAL_SAFE_OS_CALLS. It's no longer
          used in ACE/TAO/CIAO code.

        * ace/config-sco-5.0.0-mit-pthread.h:
          Removed references to ACE_HAS_T_OPMGMT. It's no longer
          used in ACE/TAO/CIAO code.

Thu Jul 13 10:35:39 UTC 2006  Olli Savia  <ops@iki.fi>

        * ace/Base_Thread_Adapter.cpp:
        * ace/Cleanup.cpp:
        * ace/OS.cpp:
        * ace/OS_Errno.cpp:
        * ace/OS_Log_Msg_Attributes.cpp:
        * ace/OS_NS_Thread.cpp:
        * ace/OS_NS_arpa_inet.cpp:
        * ace/OS_NS_ctype.cpp:
        * ace/OS_NS_dirent.cpp:
        * ace/OS_NS_dlfcn.cpp:
        * ace/OS_NS_errno.cpp:
        * ace/OS_NS_fcntl.cpp:
        * ace/OS_NS_math.cpp:
        * ace/OS_NS_netdb.cpp:
        * ace/OS_NS_poll.cpp:
        * ace/OS_NS_pwd.cpp: