@@ -1,3 +1,7 @@
+Fri Jul 14 15:45:04 UTC 2006  Steve Huston  <shuston@riverace.com>
+
+        * tests/Message_Queue_Test_Ex.{h cpp}: Corrected for !ACE_HAS_THREADS.
+
 Fri Jul 14 15:39:53 UTC 2006  Adam Mitz  <mitza@ociweb.com>
 
         * bin/tao_other_tests.lst:
